fixed logo and text alignment

--- a/styles.css
+++ b/styles.css
@@ -53,11 +53,6 @@ h1 {
     margin-top: 30px;
 }
 
-#skill-container {
-    margin-top: 5%;
-    margin-left: 10%
-}
-
 .center>img {
     display: block;
     margin: 0 auto;
@@ -69,7 +64,8 @@ h1 {
 
 #profile-pic {
     max-width: 200px;
-    border-radius: 100%
+    border-radius: 100%;
+    border: 5px solid darkgray;
 }
 
 .frame > img{
